plugins {
    id 'maven-publish'
    id 'java-library'
    id 'idea'
}
group 'com.github.SpyrosKou'
version = '2023.06.14.02'
description = 'A pure java version of actionlib'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenLocal()
    mavenCentral()

    maven {
        url "https://github.com/SpyrosKou/rosjava_mvn_repo/raw/noetic"
        name "GithubSpyrosKouRepository"
    }


}

java {
    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}


dependencies {

    implementation group: 'org.ros.rosjava_bootstrap', name: 'message_generation', version: '0.3.8'
    implementation 'org.ros.rosjava_core:rosjava:0.3.9.2'

    api 'org.ros.rosjava_messages:actionlib_msgs:1.13.0'
    api 'org.ros.rosjava_messages:actionlib:1.13.2'
    api 'org.ros.rosjava_messages:std_msgs:0.5.13'


    implementation 'com.google.guava:guava:33.0.0-jre'
    compileOnly 'org.slf4j:slf4j-api:1.7.30'

    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-configuration2:2.8.0'


    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.ros.rosjava_messages:actionlib_tutorials:0.1.10'
    testImplementation 'org.ros.rosjava_messages:turtle_actionlib:0.1.10'
    testImplementation 'org.apache.camel:camel-test:3.22.1'
    testImplementation 'org.slf4j:slf4j-api:1.7.30'
    testImplementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'
    testImplementation 'org.apache.logging.log4j:log4j-core:2.17.2'


}


publishing {
    final repositoryDirectory = "ROS_MAVEN_DEPLOYMENT_REPOSITORY"
    final mavenDeploymentRepositoryProvider = providers.gradleProperty(repositoryDirectory)
    final mavenDeploymentRepository  = mavenDeploymentRepositoryProvider.getOrElse(null)

    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    if (mavenDeploymentRepository!=null) {
        repositories {
            maven {
                name "GithubRepositoryLocation"
                url 'file:////' + mavenDeploymentRepository
            }
        }
    } else {
        logger.debug(repositoryDirectory + "not found")
    }
}



jar {
    manifest {
        version = project.version
    }
}






